# STOCK-INVESTMENT-ANALYZER

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  create_timeframe_indexes.py  create_timeframe_tables.py  fix_d415.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset_all_stocks.py  test_precommit.txt  test_precommit_final.txt  test_timeframe_fetch.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  refactoring.md
.github/workflows/: quality.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
app/: __init__.py  app.py  exceptions.py  models.py  models.pyi  types.py
app/api/: __init__.py  batch_engine_api.py  bulk_data.py  openapi.yaml  stock_master.py  swagger.py  system_monitoring.py
app/middleware/: __init__.py  versioning.py
app/migrations/: create_batch_execution_tables.py  create_stock_master_tables.py  create_timeframe_tables.py  update_stock_master_full_schema.py
app/models/: __init__.py  __init__.pyi  base.py  batch.py  database.py  errors.py  exceptions.py  master.py  mixins.py  stock_data.py  types.py
app/services/: __init__.py  batch_engine.py  batch_service.py  bulk_data_service.py  error_handler.py  jpx_stock_service.py  stock_batch_processor.py  stock_data_converter.py  stock_data_fetcher.py  stock_data_orchestrator.py  stock_data_saver.py  stock_data_scheduler.py  stock_data_service.py  stock_data_validator.py
app/static/: app.js  jpx_sequential.js  script.js  state-manager.js  style.css
app/templates/: base.html  index.html  redoc.html  swagger.html  websocket_test.html
app/utils/: __init__.py  api_response.py  auth.py  database_utils.py  rate_limit.py  structured_logger.py  timeframe_utils.py
docs/: CSS_BEM_METHODOLOGY.md  DATABASE_SETUP.md  MONITORING.md  README.md  api_bulk_fetch.md  api_specification.md  bulk-data-fetch.md  database_design.md  frontend_design.md  github_workflow.md  jpx-sequential-fetch.md  monitoring-guide.md  performance_optimization_guide.md  project_architecture.md  setup_guide.md  system_monitoring_design.md  testing_strategy.md  user_guide_jpx_sequential.md
docs/api/: README.md  api_bulk_fetch.md  api_jpx_sequential.md  api_reference.md  api_specification.md  api_usage_guide.md  openapi.md  versioning_guide.md
docs/architecture/: README.md  api_endpoints_overview.md  architecture_overview.md  batch_processing_design.md  component_dependency.md  data_flow.md  database_design.md  exception_handling.md  frontend_design.md  project_architecture.md  service_responsibilities.md  system_monitoring_design.md  system_overview.md  type_definition_strategy.md
docs/archive/: README.md  api_integration_testing_guide_deprecated_20251102.md  branch_protection_rules_deprecated_20251102.md  ci-cd_troubleshooting_deprecated_20251102.md  code_review_guide_deprecated_20251102.md  coding_standards_deprecated_20251102.md  existing_tests_deprecated_20251102.md  git_workflow_deprecated_20251102.md  github_workflow_deprecated_20251102.md  pipeline_overview_deprecated_20251102.md  test_coverage_report_deprecated_20251102.md  test_refactoring_plan_deprecated_20251102.md  test_removal_log_20251102.md  testing_guide_deprecated_20251102.md  testing_strategy_deprecated_20251102.md
docs/ci-cd/: README.md  pipeline-config.md  pipeline_overview.md  troubleshooting.md
docs/development/: branch_protection_rules.md  code_review_guide.md  exception_handling.md  formatter_linter_guide.md  frontend_guide.md  git_workflow.md  github_workflow.md  jpx_integration_spec.md  pre_commit_setup.md  test_coverage_report.md  testing_guide.md  testing_strategy.md  type_hints_guide.md
docs/frontend/: frontend_spec.md
docs/guides/: DATABASE_SETUP.md  README.md  backup_procedures.md  bulk-data-fetch.md  bulk_data_service_guide.md  contributing.md  development-workflow.md  formatter_linter_guide.md  jpx-sequential-fetch.md  monitoring-guide.md  performance_optimization_guide.md  setup_guide.md  troubleshooting.md  user_guide_jpx_sequential.md
docs/implementation/: issue-79-implementation-report.md
docs/migration/: phase1_to_phase2_migration.md
docs/standards/: README.md  (+6 more)
migrations/: create_batch_execution_tables.py  create_stock_master_tables.py  create_timeframe_tables.py  update_stock_master_full_schema.py
scripts/: ISSUE_6_VALIDATION.md  README.md  analyze_jpx_data.py  create_database.sql  create_stock_master_tables.sql  create_tables.sql  create_timeframe_indexes.sql  create_timeframe_tables.sql  dev_setup.bat  dev_setup.sh  insert_sample_data.sql  migrate_to_8tables.sql  remove_stocks_daily_table.sql  run_tests.bat  run_tests.ps1  setup_db.bat  setup_db.sh  setup_timeframe_database.sql  test_database_setup.py  test_multi_timeframe_fetching.py  test_stocks_daily_constraints.sql  validate_migration_completion.sql  validate_stocks_daily_schema.sql
tests/: README.md  README_E2E.md  conftest.py  test_api_response.py  test_api_usage_guide.py  test_app.py  test_batch_engine.py  test_batch_engine_api.py  test_batch_execution_models.py  test_bulk_data_service.py  test_d212_docstring_format.py  test_docs_quality.py  test_docs_readme_content.py  test_docs_structure.py  test_e2e_api.py  test_e2e_application.py  test_e2e_simple.py  test_error_handler.py  test_error_handling.py  test_frontend_e2e.py  test_frontend_error_display.py  test_interval_selector.py  test_jpx_stock_service.py  test_models.py  test_models_types.py  test_multi_timeframe.py  test_progress_metrics.py  test_readme_links.py  test_reset_db.py  test_setup_scripts.py  test_stock_data_service_enhanced.py  test_stock_data_services.py  test_stock_master_api.py  test_stock_master_models.py  test_stocks_daily_removal.py  test_structured_logger.py  test_system_monitoring_api.py  test_system_status_manager_unit.html  test_timeframe_database.sql  test_timeframe_models.py  (+6 more)
(+176 files in other folders)
